# smm-effieciency-prediction

./: .dockerignore  .gitignore  Jenkinsfile  pyproject.toml
artifacts/models/: model.pkl
manifests/: deployment.yaml  service.yaml
src/: custom_exception.py  logger.py
